--- a/HelloGreetingApplication/appsettings.json
+++ b/HelloGreetingApplication/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+
+    "ConnectionStrings": {
+        "GreetingAppDB": "Server=DESKTOP-SRA6F7M\\SQLEXPRESS;Database=GreetingAppAPI;Trusted_Connection=True;"
     }
-  },
-  "AllowedHosts": "*"
 }
