--- a/HelloGreetingApplication/HelloGreetingApplication.csproj
+++ b/HelloGreetingApplication/HelloGreetingApplication.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj" />
+    <ProjectReference Include="..\MiddleWare\MiddleWare.csproj" />
   </ItemGroup>
 
 </Project>
