--- a/RepositoryLayer/RepositoryLayer.csproj
+++ b/RepositoryLayer/RepositoryLayer.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MiddleWare\MiddleWare.csproj" />
     <ProjectReference Include="..\ModelLayer\ModelLayer.csproj" />
   </ItemGroup>
 
