--- a/HelloGreetingApplication/appsettings.json
+++ b/HelloGreetingApplication/appsettings.json
@@ -9,5 +9,10 @@
 
     "ConnectionStrings": {
         "GreetingAppDB": "Server=DESKTOP-SRA6F7M\\SQLEXPRESS;Database=GreetingAppAPI;Trusted_Connection=True;"
+    },
+    "JwtSettings": {
+        "Issuer": "https://localhost:7228",
+        "Audience": "https://localhost:7228",
+        "Key": "Nmn3yHs@!zjdfOij*#8uVYgo@#$a23L5pkDmb92Vt7XZqLg9f%@tUr"
     }
 }
