[Vaibhav] Add: Adding UC12 Codes

--- a/HelloGreetingApplication/appsettings.json
+++ b/HelloGreetingApplication/appsettings.json
@@ -14,5 +14,12 @@
         "Issuer": "https://localhost:7228",
         "Audience": "https://localhost:7228",
         "Key": "Nmn3yHs@!zjdfOij*#8uVYgo@#$a23L5pkDmb92Vt7XZqLg9f%@tUr"
+    },
+    "SMTP": {
+        "Host": "smtp.gmail.com",
+        "Port": 587,
+        "Username": "vaibhavsinggh144@gmail.com",
+        "Password": "owgi vnzy jeao vzku",
+        "EnableSsl": true
     }
 }
