[Vaibhav] Update: Updated Appsetting.json

--- a/HelloGreetingApplication/appsettings.json
+++ b/HelloGreetingApplication/appsettings.json
@@ -18,8 +18,8 @@
     "SMTP": {
         "Host": "smtp.gmail.com",
         "Port": 587,
-        "Username": "vaibhavsinggh144@gmail.com",
-        "Password": "owgi vnzy jeao vzku",
+        "Username": "Enter your mail",
+        "Password": "enter your password",
         "EnableSsl": true
     }
 }
