[Vaibhav] Add: Adding UC13 Codes

--- a/HelloGreetingApplication/appsettings.json
+++ b/HelloGreetingApplication/appsettings.json
@@ -8,7 +8,7 @@
     "AllowedHosts": "*",
 
     "ConnectionStrings": {
-        "GreetingAppDB": "Server=DESKTOP-SRA6F7M\\SQLEXPRESS;Database=GreetingAppAPI;Trusted_Connection=True;"
+        "GreetingAppDB": "Server=DESKTOP-SRA6F7M\\SQLEXPRESS;Database=GreetingAppAPI_Final;Trusted_Connection=True;"
     },
     "JwtSettings": {
         "Issuer": "https://localhost:7228",
