[Vaibhav] Add: Adding UC14 Codes

--- a/HelloGreetingApplication/appsettings.json
+++ b/HelloGreetingApplication/appsettings.json
@@ -21,5 +21,13 @@
         "Username": "Enter your mail",
         "Password": "enter your password",
         "EnableSsl": true
+    },
+    "RabbitMQ": {
+        "Host": "localhost",
+        "QueueName": "Greet"
+    },
+    "Redis": {
+        "Connection": "localhost:6379",
+        "InstanceName": "Greet"
     }
 }
